[project]
name = "chatterbox-tts"
version = "0.1.6"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    "librosa",
    "numpy",
    "transformers==4.46.3",
    "diffusers",
    "torchaudio",
    "s3tokenizer",
    "conformer",
    "safetensors",
    "spacy-pkuseg",
    "pykakasi",
    "pyloudnorm",
    "omegaconf",
    "torchcodec"
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
